<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_map"
    xmlns:app="http://schemas.android.com/tools">

    <com.mapbox.services.android.geocoder.ui.GeocoderAutoCompleteView
        android:id="@+id/query"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="14dp"
        android:padding="10dp"
        android:hint="Search Location"
        android:textColor="@android:color/black"
        android:background="@android:color/white"
        android:elevation="12dp"/>

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:access_token="@string/accessToken"
        mapbox:style_url="@string/style_mapbox_streets"
        mapbox:zoom="12"
        mapbox:tilt="20"/>

    <LinearLayout
        android:id="@+id/container_info"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:background="@color/Transparent"
        android:orientation="vertical"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adress_info"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/address"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/d_container"
                    android:layout_weight="1">

                    <TextView
                        android:padding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_label"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:padding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/distance_info"
                        android:text="@string/distance"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:padding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_label"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:padding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/work_info"
                        android:text="@string/work"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:id="@+id/time_info"
                android:gravity="center"
                android:textSize="85sp"
                android:visibility="visible"
                android:text="@string/distance"/>
            </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_margin="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="gone"
        android:src="@drawable/ic_route"
        android:background="@drawable/fab_button_route"
        android:id="@+id/fabButton"
        app:theme="@style/Base.Widget.AppCompat.ImageButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:elevation="6dp"/>

</RelativeLayout>